--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cmdk": "^1.0.0",
     "input-otp": "^1.1.0",
     "lucide-react": "^0.356.0",
+    "moment": "^2.30.1",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
     "random-string-alphanumeric-generator": "^0.12.2",
@@ -31,6 +32,7 @@
     "react-animated-numbers": "^0.18.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-timer-hook": "^3.0.7",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0"
