--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
+    "embla-carousel-react": "^8.0.0",
     "input-otp": "^1.1.0",
     "lucide-react": "^0.356.0",
     "moment": "^2.30.1",
